error.txt
/home/lital/Desktop/myshell/students/Compilation_Error_gets_10/error1.c: In function ‘main’:
/home/lital/Desktop/myshell/students/Compilation_Error_gets_10/error1.c:5:5: error: expected declaration or statement at end of input
     printf("dfg");
     ^~~~~~
/home/lital/Desktop/myshell/students/Compilation_Error_gets_10/error1.c: In function ‘main’:
/home/lital/Desktop/myshell/students/Compilation_Error_gets_10/error1.c:5:5: error: expected declaration or statement at end of input
     printf("dfg");
     ^~~~~~
